<resources>
    <string name="app_name">Nawigacja Pollub</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_choose_route">Wybór trasy</string>

    <string name="label_floor_ground">Parter</string>
    <string name="label_floor_1">Piętro: 1</string>
    <string name="label_floor_2">Piętro: 2</string>
    <string name="label_start">Punkt początkowy:</string>
    <string name="label_finish">Punkt końcowy:</string>
    <string name="label_notchoose">Nie wybrano&#8230;</string>

    <string name="button_weii">Wydział Elektrotechniki i Informatyki</string>
    <string name="button_callhelp">Button</string>
    <string name="button_choose">Wybierz</string>
    <string name="button_choose_route">Wyznacz trasę</string>
    <string name="button_message_ok">OK</string>
    <string name="button_message_cancel">Anuluj</string>

    <string name="checkbox_invalid">Jestem inwalidą</string>

    <string name="reachedtarget_message_title">Dotarłeś do celu</string>
    <string name="reachedtarget_message_body">Punkt docelowy został osiągnięty.</string>

    <string name="localization_failure_message_title">Nie udało się ustalić lokalizacji</string>
    <string name="localization_failure_message_body">Przykro mi, ale nie udało się ustalić twojej lokalizacji&#8230; \nSpróbuj ponownie lub wybierz przybliżony punkt początkowy.</string>

    <string name="locationofff_title">Lokalizacja jest wyłączona</string>
    <string name="locationoff_body">Aby aplikacja mogła ustalić gdzie jesteś, musisz włączyć lokalizację.</string>

    <string name="callhelp_message_info">Czy chcesz wezwać pomoc?</string>
    <string name="callhelp_message_title">Wezwano pomoc</string>
    <string name="callhelp_message_successful">Dozorca budynku został powiadomiony o tym, że potrzebujesz pomocy. Proszę pozostań na miejscu i zaczekaj.</string>
    <string name="callhelp_message_failure">Dozorca budynku został powiadomiony o tym, że potrzebujesz pomocy. Twoja lokalizacja jednak nie mogła zostać określona, więc postaraj się zaczekać przy wejściu do budynku.</string>

    <!--<string name="caretaker_phonenumber">NUMER_TELEFONU_DOZORCY</string>-->
    <string name="caretaker_phonenumber">NUMER_DOZORCY</string>
    <string name="caretaker_message_successful">Osoba niepełnosprawna potrzebuje pomocy. Znajduje się w pobliżu pokojów:</string>
    <string name="caretaker_message_failure">Osoba niepełnosprawna potrzebuje pomocy. Jej lokalizacja nie mogła zostać określona. Została jej przekazana informacja o pozostanie w pobliżu wejścia do budynku.</string>

    <string name="wifi_wait">Przekroczono limit skanowań. \nOdczekaj chwilę i spróbuj ponownie.</string>

    <string name="path_startpoint_title">Punkt początkowy</string>
    <string name="path_startpoint_body">Tu jesteś!</string>
    <string name="path_finishpoint_title">Punkt docelowy</string>
    <string name="path_finishpoint_body">Tutaj chcesz dojść!</string>
    <string name="path_stairs_title">Klatka schodowa</string>
    <string name="path_stairs_body_1">Wejdź schodami na</string>
    <string name="path_stairs_body_2">piętro.</string>
    <string name="path_elevator_title">Winda</string>
    <string name="path_elevator_body_1">Wjedź windą na</string>
    <string name="path_elevator_body_2">piętro.</string>
</resources>