<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/wallpaper"
    tools:context=".ChooseRouteActivity">

    <TextView
        android:id="@+id/textViewStartPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginStart="15dp"
        android:text="@string/label_start"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/startPoint"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:text="@string/label_notchoose"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"/>

        <Button
            android:id="@+id/buttonChooseStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_choose"
            android:onClick="buttonChooseStartOnClick"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewEndPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:text="@string/label_finish"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/finishPoint"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:text="@string/label_notchoose"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"/>

        <Button
            android:id="@+id/buttonChooseEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_choose"
            android:onClick="buttonChooseEndOnClick"/>

    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBoxInvalid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:drawableStart="@drawable/disabled_logo"
        android:drawablePadding="5dp"
        android:text="@string/checkbox_invalid"
        android:textColor="@android:color/white"
        android:buttonTint="@android:color/white"/>

    <Button
        android:id="@+id/buttonChooseRoute"
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:onClick="buttonChooseRouteOnClick"
        android:text="@string/button_choose_route" />
</LinearLayout>